[tool.poetry]
name = "pywhy_graphs"
#
# 0.0.0 is standard placeholder for poetry-dynamic-versioning
# any changes to this should not be checked in
#
version = "0.0.0"
description = "Causal Graphs for Python"
authors = ["PyWhy Community <adam.li@columbia.com>"]
license = "MIT"
documentation = "https://py-why.github.io/pywhy-graphs"
repository = "https://github.com/py-why/pywhy-graphs"
readme = "README.md"
classifiers = [
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
keywords = ['causality', 'graphs', 'causal-inference', 'graphical-model']

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[tool.poetry-dynamic-versioning.substitution]
files = ["pywhy_graphs/__init__.py"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ['pywhy_graphs*']
exclude = ['*tests']

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.23.0"
scipy = "^1.9.0"
networkx = { git = "https://github.com/adam2392/networkx.git", branch = 'mixededge' }
importlib-resources = { version = "*", python = "<3.9" }
dynetx = { version = "*", optional = true }
pygraphviz = { version = "*", optional = true }

[tool.poetry.group.test]
optional = true
[tool.poetry.group.test.dependencies]
poethepoet = "^0.16.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
memory_profiler = { version = "^0.60.0" }
causal-learn = { version = "^0.1.2.8" }

[tool.poetry.group.style]
optional = true
[tool.poetry.group.style.dependencies]
poethepoet = "^0.16.0"
mypy = "^0.971"
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
bandit = "^1.7.4"
pydocstyle = "^6.1.1"
codespell = "^2.1.0"
toml = "^0.10.2"

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
poethepoet = "^0.16.0"
portray = "^1.7.0"
matplotlib = { version = "^3.5" }
numpydoc = { version = "^1.4" }
pydata-sphinx-theme = { version = "^0.9.0" }
sphinx = { version = "^5.1.1" }
sphinxcontrib-bibtex = { version = "^2.4.2" }
sphinx-issues = { version = "^3.0.1" }
sphinx-copybutton = { version = "^0.5.0" }
sphinx-gallery = { version = "^0.11.0" }
sphinx_rtd_theme = { version = "^1.0.0" }
graphviz = { version = "^0.20.1" }
ipython = { version = "^7.4.0" }
nbsphinx = { version = "^0.8" }
dowhy = { version = "^0.8" }
scikit-learn = { version = "^1.1.0" }         # needed in dowhy's package
pandas = { version = "^1.1" }                 # needed in dowhy's package
joblib = { version = "^1.1.0" }               # needed in dowhy's package
tqdm = { version = "^4.64.0" }                # needed in dowhy's package
typing-extensions = { version = "*" }         # needed in dowhy's package 

[tool.poetry.extras]
ts = ['dynetx']
viz = ['pygraphviz']

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
_flake8 = 'flake8'
_bandit = 'bandit -r pywhy_graphs -c pyproject.toml'
_black = 'black .'
_isort = 'isort .'
_black_check = 'black --check pywhy_graphs examples'
_isort_check = 'isort --check .'
_pydocstyle = 'pydocstyle .'
_codespell = 'codespell pywhy_graphs/ doc/ examples/ --ignore-words=.codespellignore --skip "**/_build/*"'
_changelog = 'semversioner changelog > CHANGELOG.md'
_apply_version = 'semversioner release'

type_check = 'mypy -p pywhy_graphs --config-file pyproject.toml'
unit_test = 'pytest ./pywhy_graphs ./tests --cov=pywhy_graphs --cov-report=xml --cov-config=pyproject.toml'
integration_test = 'pytest tests/integration_tests'
build_docs = 'make build-docs'

[[tool.poe.tasks.lint]]
sequence = ['_flake8', '_bandit', '_codespell', '_pydocstyle']
ignore_fail = 'return_non_zero'

[[tool.poe.tasks.apply_format]]
sequence = ['_black', '_isort']
ignore_fail = 'return_non_zero'

[[tool.poe.tasks.check_format]]
sequence = ['_black_check', '_isort_check']
ignore_fail = 'return_non_zero'

#
# a standard verification sequence for use in pull requests
#
[[tool.poe.tasks.verify]]
sequence = ['apply_format', 'lint', 'type_check', 'unit_test']
ignore_fail = "return_non_zero"

[[tool.poe.tasks.release]]
sequence = ['_changelog', '_apply_version']

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
(
      __pycache__
    | \.github
    | setup.py
    | docs/
)
'''

[tool.pylint]
max-line-length = 120
disable = ["W0511"]

[tool.isort]
profile = 'black'
multi_line_output = 3
line_length = 100
py_version = 38
extend_skip_glob = ['setup.py', 'docs/*', 'pywhy_graphs/__init__.py']

[tool.pydocstyle]
convention = 'numpy'
ignore-decorators = '(copy_doc|property|.*setter|.*getter)'
match = '^(?!setup|__init__|test_).*\.py'
match-dir = '^pywhy_graphs.*'
add_ignore = 'D100,D104,D105,D107'

[tool.mypy]
ignore_missing_imports = true
no_site_packages = true

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '--durations 20 --junit-xml=junit-results.xml --verbose'
filterwarnings = []

[tool.coverage.run]
branch = true
cover_pylib = false
source = ['pywhy_graphs']
omit = ['**/__init__.py', '**/tests/**']

[tool.coverage.report]
exclude_lines = ['pragma: no cover', 'if __name__ == .__main__.:']
precision = 2

[tool.bandit]
exclude_dirs = ["tests"]
