[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools >= 64.0.0']

[project]
name = "pywhy-graphs"
version = "0.2.0dev0"
description = "Causal Graphs for Python"
readme = "README.md"
license = { file = 'LICENSE' }
classifiers = [
  'Development Status :: 4 - Beta',
  "License :: OSI Approved :: MIT License",
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
]
keywords = ['causality', 'graphs', 'causal-inference', 'graphical-model']
maintainers = [{ name = "PyWhy", email = "adam.li@columbia.edu" }]
requires-python = ">=3.9"

dependencies = ['numpy>=1.25.0', 'scipy>=1.9.0', 'networkx>=3.1']

[project.optional-dependencies]
all = [
  'pywhy-graphs[build]',
  'pywhy-graphs[doc]',
  'pywhy-graphs[style]',
  'pywhy-graphs[test]',
]
build = ['build', 'twine', 'numpy>=1.25.0']
doc = [
  'memory-profiler',
  'numpydoc',
  'pooch',
  'pydata-sphinx-theme',
  'sphinx==7.2.6',
  'sphinx-copybutton',
  'sphinx-design',
  'sphinx-gallery',
  'sphinx-issues',
  'sphinx_autodoc_typehints',
  'sphinxcontrib-bibtex',
  'portray',
  'matplotlib',
  'ipython',
  'nbsphinx',
  'pandas',
  'seaborn',
  'joblib',
  'graphviz',
  'pygraphviz',
  'pgmpy',
]
style = [
  "pre-commit",
  'black',
  'codespell',
  'isort',
  'pydocstyle',
  'pydocstyle[toml]',
  'rstcheck',
  'ruff',
  'toml-sort',
  'yamllint',
  'mypy',
  'flake8',
  'toml',
]
test = [
  'joblib',
  'pandas',
  'pytest',
  'pytest-cov',
  'flaky',
  'tqdm',
  'causal-learn',
  'ananke-causal<0.4.0', # XXX: API changed to include "Vertices", which has not refactored here yet
]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
(
      __pycache__
    | \.github
    | setup.py
    | doc/
)
'''

[tool.coverage.report]
exclude_lines = ['pragma: no cover', 'if __name__ == .__main__.:']
precision = 2

[tool.coverage.run]
branch = true
cover_pylib = false
source = ['pywhy_graphs']
omit = [
  '**/__init__.py',
  'pywhy_graphs/config.py',
  '**/networkxprotocol.py',
  '**/tests/**',
  'pywhy_graphs.export.py',
]

[tool.isort]
profile = 'black'
multi_line_output = 3
line_length = 100
py_version = 38
extend_skip_glob = ['setup.py', 'doc/*', 'pywhy_graphs/__init__.py']

[tool.mypy]
ignore_missing_imports = true
no_site_packages = true

[tool.pydocstyle]
convention = 'numpy'
ignore-decorators = '(copy_doc|property|.*setter|.*getter)'
match = '^(?!setup|__init__|test_).*\.py'
match-dir = '^pywhy_graphs.*'
add_ignore = 'D100,D104,D105,D107'

[tool.pylint]
max-line-length = 120
disable = ["W0511"]

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '--durations 20 --junit-xml=junit-results.xml --verbose'
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
extend-exclude = ['doc', 'setup.py']
line-length = 88
ignore = ['E731']

[tool.ruff.per-file-ignores]
'__init__.py' = ['F401']


[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
'pywhy_graphs.export' = ['tests/*.txt']

[tool.setuptools.packages.find]
exclude = ['pywhy_graphs*tests']
include = ['pywhy_graphs*']
